Made a change to fix site layout on mobile devices. Added a website title and favicon

--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 520px) {
+    .hide-small-screen {
+        display: none;
+    }
+}
+
 * {
     box-sizing: border-box;
 }
